--- a/mart.css
+++ b/mart.css
@@ -1,18 +1,17 @@
-/* General Styling */
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Arial', sans-serif;
+  background: linear-gradient(to right, #1e3c72, #2a5298, #4a90e2, #6fb3d2); /* Blue-themed multi-color gradient */
   margin: 0;
   padding: 0;
-  background-color: #f0f8ff;
   color: #333;
+  line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ensures body takes at least full height */
 }
 
-header {
-  background-color: #4CAF50;
-  color: white;
-  padding: 20px;
-  text-align: center;
-}
+
+
 
 h1 {
   font-size: 2rem;
@@ -218,7 +217,7 @@ h1 {
 h2 {
   font-size: 2rem; /* Bigger font size */
   font-weight: bold; /* Bold text */
-  color: #4CAF50; /* Use a green color to match the theme */
+  color: white; /* Use a green color to match the theme */
   text-transform: uppercase; /* Make text uppercase */
   letter-spacing: 2px; /* Add some spacing between letters */
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* Add subtle shadow for effect */
@@ -231,4 +230,7 @@ header {
   margin-bottom: -10px; /* Reduce margin to minimize space between navbar and heading */
 }
 
+.button {
+  border: 1px solid greenyellow;
+}
 
